tests/golden/compile-pass/option_some_none.rua
fn present() -> Option<i64> {
    Some(5)
}

fn absent() -> Option<i64> {
    None
}
