tests/golden/compile-fail/option_some_wrong_arity.rua
fn value() -> Option<i64> {
    Some()
}
